--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.bee_v03">
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,23 +14,26 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Bee_v03">
         <activity
-            android:name=".ObjectActivity"
+            android:name=".AddLocationActivity"
             android:exported="false"
             android:parentActivityName=".SelectActivity"/>
         <activity
+            android:name=".ObjectActivity"
+            android:exported="false"
+            android:parentActivityName=".SelectActivity" />
+        <activity
             android:name=".GlobalActivity"
             android:exported="false"
-            android:parentActivityName=".MainActivity"/>
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".SelectActivity"
             android:exported="false"
             android:launchMode="singleTop"
-            android:parentActivityName=".MainActivity"/>
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".SettingsActivity"
             android:exported="false"
-            android:parentActivityName=".MainActivity" />
-        <!--singletop launch mode guarantees that the status of parent method will be saved -->
+            android:parentActivityName=".MainActivity" /> <!-- singletop launch mode guarantees that the status of parent method will be saved -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
