--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -14,9 +14,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Bee_v03">
         <activity
+            android:name=".AddHiveActivity"
+            android:exported="false" />
+        <activity
             android:name=".AddLocationActivity"
             android:exported="false"
-            android:parentActivityName=".SelectActivity"/>
+            android:parentActivityName=".SelectActivity" />
         <activity
             android:name=".ObjectActivity"
             android:exported="false"
